# goat_shape_state_estimation

./: Dockerfile  README.md  docker-compose.yml  run.sh
goat_shape_state_estimation/: package.xml  setup.cfg  setup.py
goat_shape_state_estimation/goat_shape_state_estimation/: goat_shape_state_estimation.py
goat_shape_state_estimation/models/: latest.pt
