<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>goat_shape_state_estimation</name>
  <version>0.0.9</version>
  <description>The GOAT shape and state estimation package</description>
  <maintainer email="valentin.yuryev@epfl.ch">Valentin Yuryev</maintainer>
  <license>BSD3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>